# pizza-shop-agent

./: Dockerfile  README.md  __init__.py  client.py  hackathon_topic.html  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
scripts/: baseline_inference.py  test_openai_key.py  validate-submission.sh  validate_phase2_local.py
server/: __init__.py  app.py  baseline.py  environment.py  graders.py  reward.py
tests/: conftest.py  test_graders.py  test_reward_logic.py
